Fix text wrapping

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -59,8 +59,7 @@ header nav{
     padding-top: 5px;
     padding-bottom: 10px;
     height: auto;
-    min-height: 360px; 
-    overflow-wrap: inherit;
+    min-height: 360px;
     
 }
 
@@ -150,13 +149,14 @@ header nav{
     gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     padding: 10px;
-    overflow-wrap: break-word;
 }
 
 .et-p{
     color: rgb(230, 230, 230);
     margin: 0px 10px;
-    overflow-wrap: inherit;
+    width: 45vw;
+    overflow-wrap: break-word;
+    white-space: normal;
 }
 
 
